--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="tabs_color">#10999CA0</color>
     <color name="primary_20">#40D9D9D9</color>
     <color name="green">#008000</color>
+    <color name="contact_message_background">#60D9D9D9</color>
+    <color name="contact_msg_text_color">#5D6066</color>
 </resources>
