--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="green">#008000</color>
     <color name="contact_message_background">#60D9D9D9</color>
     <color name="contact_msg_text_color">#5D6066</color>
+    <color name="chat_edit_text_background">#F2F2F2</color>
+    <color name="chat_user_info_backdround">#20999CA0</color>
 </resources>
