--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,18 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/login_pic"
-        android:layout_width="183dp"
-        android:layout_height="209dp"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/welcome_text"
-        android:layout_marginTop="20dp"
-        />
-
     <TextView
         android:id="@+id/welcome_text"
         android:layout_width="0dp"
@@ -30,7 +18,9 @@
         app:layout_constraintBottom_toTopOf="@id/login_to_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_pic" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="50dp"
+        />
 
     <TextView
         android:id="@+id/login_to_continue"
@@ -106,6 +96,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/log_in_form"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="100dp">
 
