--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -13,7 +13,7 @@
         app:layout_constraintBottom_toTopOf="@id/register_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/chat_ic"
         android:layout_marginTop="70dp"
         />
 
